crates/sdk-core/tests/workflows_trybuild/sync_run_fail.stderr
error: #[run] methods must be async
  --> tests/workflows_trybuild/sync_run_fail.rs:10:9
   |
10 |     pub fn run(&self, _ctx: &mut WorkflowContext<Self>) -> WorkflowResult<()> {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
